@@ -1,3 +1,8 @@
+2020-04-25  b606  <7627533+b606@users.noreply.github.com>
+
+	* LanguageWorker_French_Debug.cs: All Loggers are private
+	static members with public static debugging functions.
+
 2020-04-24  b606  <7627533+b606@users.noreply.github.com>
 
 	* LanguageWorker_French_Debug.cs: Reduce log messages by
